--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script>
         
         $(document).ready(function () {
-            const liffId = "**********-********";
+            const liffId = "2007397407-DzrYjP7B";
             initializeLiff(liffId);
         })
 
