--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 <body>
 
     <form class="w-75 mx-auto">
-        <p class="mt-3">名前</p>
+        <p class="mt-3">名前※必須</p>
         <div>
-            <input class="form-control w-100 mt-1" name="name" placeholder="" required>
+            <input class="form-control w-100 mt-1" name="name" placeholder="パレス玲奈" required>
         </div>
-        <p class="mt-3">年齢</p>
+        <p class="mt-3">年齢※必須</p>
         <div>
-            <input class="form-control w-100 mt-1" name="udetate" required>
+            <input class="form-control w-100 mt-1" name="udetate" placeholder="30" required>
         </div>
-        <p class="mt-3">郵便番号</p>
+        <p class="mt-3">郵便番号※必須</p>
         <div>
-            <input class="form-control w-100 mt-1" name="fukkin" required>
+            <input class="form-control w-100 mt-1" name="fukkin" placeholder="222-2222" required>
         </div>
-        <p class="mt-3">電話番号</p>
+        <p class="mt-3">電話番号※必須</p>
         <div>
-            <input class="form-control w-100 mt-1" name="haikin" required>
+            <input class="form-control w-100 mt-1" name="haikin" placeholder="070-1234-5678" required>
         </div>
         <p class="mt-3">備考</p>
         <div>
-            <input class="form-control w-100 mt-1" name="sukuwat" required>
+            <input class="form-control w-100 mt-1" name="sukuwat" placeholder="気になるポイントなどあればご記載ください">
         </div>
         <input type="submit" class="mt-4 btn btn-primary" value="送信">
     </form>
@@ -41,7 +41,7 @@
     <script>
         
         $(document).ready(function () {
-            const liffId = "2007397407-DzrYjP7B";
+            const liffId = "**********-********";
             initializeLiff(liffId);
         })
 
