--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <p class="mt-3">備考</p>
         <div>
-            <input class="form-control w-100 mt-1" name="sukuwat" placeholder="気になるポイントなどあればご記載ください">
+            <input class="form-control w-100 mt-1" name="sukuwat" placeholder="気になるポイントをご記載ください">
         </div>
         <input type="submit" class="mt-4 btn btn-primary" value="送信">
     </form>
@@ -41,7 +41,7 @@
     <script>
         
         $(document).ready(function () {
-            const liffId = "**********-********";
+            const liffId = "2007397407-DzrYjP7B";
             initializeLiff(liffId);
         })
 
